--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "mocha ./test/test.js --timeout 1000000",
     "lint": "eslint ./src/index.js --fix",
-    "build": "./node_modules/.bin/babel src --out-dir ./build --copy-files",
+    "build": "./node_modules/.bin/babel src --out-dir ./lib --copy-files",
     "build:js": "npm-run-all -p build:lib build:global",
     "build:lib": "npm run babel",
     "build:global": "browserify ./src/index.js -t babelify -p licensify --standalone aTable -o ./build/a-table.js && npm run build:global:min",
