--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "a-tables",
-  "version": "0.0.1",
+  "version": "1.5.9",
   "main": "lib/index.js",
-  "description": "Editor JS Editable table library",
-  "author": "darshan <darshanparihar1@gmail.com>",
+  "description": "Editable table library",
+  "author": "darshan prajapat <darshanparihar1@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test": "mocha ./test/test.js --timeout 1000000",
     "lint": "eslint ./src/index.js --fix",
-    "build": "./node_modules/.bin/babel ./src/index.js --out-file ./lib --copy-files",
     "build:js": "npm-run-all -p build:lib build:global",
     "build:lib": "npm run babel",
     "build:global": "browserify ./src/index.js -t babelify -p licensify --standalone aTable -o ./build/a-table.js && npm run build:global:min",
@@ -22,28 +21,24 @@
     "major": "npm run test && npm version major && npm run build:js && node ./tools/index.js"
   },
   "dependencies": {
-    "a-template": "^0.6.1",
+    "a-template": "^0.5.4",
     "clone": "^2.0.0",
     "custom-event-polyfill": "^0.3.0",
     "deep-extend": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.26.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-html-import-to-string": "^0.0.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
-    "babelify": "^8.0.0",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.18.6",
     "browserify": "^13.1.1",
     "co": "^4.6.0",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "esmify": "^2.1.1",
     "fs-extra": "^2.1.2",
     "http-server": "^0.9.0",
     "licensify": "^3.1.2",
