--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "a-tables",
   "version": "1.5.9",
   "main": "lib/index.js",
-  "description": "Editable table library",
+  "description": "Editor Js Editable table library",
   "author": "darshan prajapat <darshanparihar1@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -21,36 +21,40 @@
     "major": "npm run test && npm version major && npm run build:js && node ./tools/index.js"
   },
   "dependencies": {
-    "a-template": "^0.5.4",
-    "clone": "^2.0.0",
-    "custom-event-polyfill": "^0.3.0",
-    "deep-extend": "^0.5.0"
+    "a-template": "^0.6.1",
+    "babel-plugin-transform-html-import-to-string": "0.0.1",
+    "clone": "^2.1.2",
+    "custom-event-polyfill": "^1.0.7",
+    "deep-extend": "^0.6.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-html-import-to-string": "^0.0.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.18.6",
-    "browserify": "^13.1.1",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/register": "^7.12.1",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.26.13",
+    "browserify": "^17.0.0",
     "co": "^4.6.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "fs-extra": "^2.1.2",
-    "http-server": "^0.9.0",
-    "licensify": "^3.1.2",
-    "mocha": "^3.3.0",
-    "nightmare": "^2.8.1",
-    "node-cmd": "^2.0.0",
-    "node-sass": "^4.3.0",
-    "nodemon": "^1.11.0",
-    "npm-run-all": "^4.1.1",
-    "onchange": "^3.2.1",
-    "power-assert": "^1.4.2",
-    "uglify-js": "^2.8.22",
-    "watchify": "^3.9.0"
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "fs-extra": "^9.0.1",
+    "http-server": "^0.12.3",
+    "licensify": "^3.1.3",
+    "mocha": "^8.2.0",
+    "nightmare": "^3.0.2",
+    "node-cmd": "^3.0.0",
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "power-assert": "^1.6.1",
+    "uglify-js": "^3.11.4",
+    "watchify": "^3.11.1"
   }
 }
