--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "major": "npm run test && npm version major && npm run build:js && node ./tools/index.js"
   },
   "dependencies": {
-    "a-template": "^0.6.1",
+    "a-template": "github:darshaninsteract/a-template#master",
     "babel-plugin-transform-html-import-to-string": "0.0.1",
     "clone": "^2.1.2",
     "custom-event-polyfill": "^1.0.7",
